feat: 阶段5，增强插件化能力
